TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "129594369002512" [label="Start"];
  "129594369002512" -> "129594369006160";
  "129594369006160" [label="Code"];
  "129594369006160" -> "129594369003040";
  "129594369003040" [label="Function"];
  "129594369003040" -> "129594369000832";
  "129594369003040" -> "129594368999632";
  "129594369003040" -> "129594369007168";
  "129594369000832" [label="main IDENTIFIER"];
  "129594368999632" [label="Parameters"];
  "129594369007168" [label="Code"];
  "129594369007168" -> "129594369006304";
  "129594369007168" -> "129594369001648";
  "129594369007168" -> "129594369008944";
  "129594369006304" [label="Code"];
  "129594369006304" -> "129594369004144";
  "129594369004144" [label="Declaration"];
  "129594369004144" -> "129594369008272";
  "129594369004144" -> "129594369007120";
  "129594369008272" [label="x IDENTIFIER"];
  "129594369007120" [label="1 INT"];
  "129594369001648" [label="Code"];
  "129594369001648" -> "129594369004096";
  "129594369004096" [label="Declaration"];
  "129594369004096" -> "129594369001744";
  "129594369004096" -> "129594369004624";
  "129594369001744" [label="x IDENTIFIER"];
  "129594369004624" [label="2 INT"];
  "129594369008944" [label="Return"];
  "129594369008944" -> "129594369001072";
  "129594369001072" [label="0 INT"];
}
